# datasync

./: .gitignore  Cargo.toml  README.md
job/: canteen_all_db_sync.toml.example
src/: args.rs  lib.rs  main.rs
src/db/: mod.rs  mysql_db.rs
src/demo/: data_sync.rs  mod.rs
src/handle/: help.rs
src/model/: job.rs
src/util/: common.rs
tests/: sync_test.rs
