[package]
name = "datasync"
version = "0.1.0"
edition = "2024"

[dependencies]
# 数据库操作库
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "mysql"]}

# tokio异步库
tokio = {version = "1.45", features = ["full"]}

# 时间处理库
chrono = {version = "0.4"}

# gzip压缩库
flate2 = {version = "1.0"}

#序列化/反序列化库
serde = { version = "1.0", features = ["derive"] }

#toml配置文件处理库
toml = "0.8"

# 字符编码支持
encoding = "0.2"